--- a/public-survival.html
+++ b/public-survival.html
@@ -57,10 +57,11 @@
 									<p>参加するにあたっては下記の利用規約に同意していただき、参加フォームを送ってください</p>
 									<p>下記の利用規約も含め、特に注意することをここでいくつか言及します
 										<ul>
+											<li>フォームに記入していただいた学籍番号をもとにメールで招待します</li>
 											<li>基本的に他の人へ迷惑を掛ける行為は行わないでください</li>
 											<li>このサーバーは<b>Minecraft JavaEdition</b>のみ参加可能です</li>
 											<li>サーバー内活動をSNSで拡散することを推奨しているため、サーバー内でのチャットや行動など個人情報や差別的発言は控えるようにお願いします（またSNSにアップロードする際も写り込んでいるものはアップロードしないようにお願いします）</li>
-											<li>わからないことがあればDiscordで連絡してください</li>
+											<li>わからないことがあればTwitterやDiscordで連絡してください</li>
 										</ul>
 									</p>
 
