--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">ホーム</a></li>
-								<li><a href="public-survival.html">公開サバイバル</a></li>
 								<li>
 									<a href="sns.html">SNS</a>
 									<ul>
@@ -67,7 +66,8 @@
 						<!-- Features -->
 							<section id="features">
 								<header class="style1">
-									<h2>山梨大学生限定公開サバイバル</h2>
+									<p>終了しました</p>
+									<h2><s>山梨大学生限定公開サバイバル</h2>
 									<p>山梨大学Minecraftサークルでは山梨大学生に無料でJavaEditionサバイバルワールドを公開しています</p>
 								</header>
 								<div class="feature-list">
@@ -98,10 +98,7 @@
 										</div>
 									</div>
 								</div>
-								<ul class="actions special">
-									<li><a href="public-survival.html" class="button style1 large">Get Started</a></li>
-									<li><a href="public-survival.html" class="button style2 large">More Info</a></li>
-								</ul>
+								</s>
 							</section>
 
 					</div>
